<resources>
    <string name="AM">AM</string>
    <string name="Auto_payment">Automatic Payment</string>
    <string name="Auto_recharge">Automatic Recharge</string>
    <string name="CL_confirmation_first">Your main plan will be changed from </string>
    <string name="CL_confirmation_second">  To  </string>
    <string name="From">From</string>
    <string name="Good_Afternoon">Good afternoon</string>
    <string name="Good_Evening">Good evening</string>
    <string name="Got_it">Got it!</string>
    <string name="NOTIFICATION_ID">NOTIFICATION_ID</string>
    <string name="PM">PM</string>
    <string name="SMS">SMS</string>
    <string name="Suspend_resume_service">Suspend/Reactivate Service</string>
    <string name="Ticket_id">Request Number</string>
    <string name="Tickets">Tickets</string>
    <string name="To">To</string>
    <string name="Worldcup">World cup</string>
    <string name="_01555000111">01555000111</string>
    <string name="_111">111</string>
    <string name="_19777">19777</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutWePay">About We Pay</string>
    <string name="acceptDeactivateTermsAndConditions">I\'ve read and accepted terms &amp; conditions</string>
    <string name="accountCreated">Your account has been created successfully</string>
    <string name="account_added_successfully">Account has been added successfully</string>
    <string name="account_already_exist">Account already exists</string>
    <string name="account_created_successfully">Congratulation! Your &lt;strong&gt;account&lt;/strong&gt; has been created successfully</string>
    <string name="account_id">Account ID</string>
    <string name="account_info">Account information</string>
    <string name="account_information">Account Information</string>
    <string name="account_management_tag">Add new number Add new account Add other number</string>
    <string name="account_managment">Account Management</string>
    <string name="account_passwod">Account password</string>
    <string name="account_password">Set your account &lt;strong&gt;password&lt;/strong&gt;</string>
    <string name="accounts_body">Manage your numbers &amp; other accounts</string>
    <string name="accounts_title">Accounts</string>
    <string name="action_toggle_language">عربي</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_number_validation">Service Number must start with 01 for mobile numbers or area code for landline numbers</string>
    <string name="add_consumption_limit">Set consumption limit</string>
    <string name="add_debit">Add a credit/debit card to automatically pay your bill.</string>
    <string name="add_more_bundles">More Add-Ons</string>
    <string name="add_more_bundles1">Add More Add-Ons</string>
    <string name="add_more_bundles_btntext">Add More Bundles</string>
    <string name="add_new_account">Add New Account</string>
    <string name="add_new_number">Add new number</string>
    <string name="add_payment_limit">Set payment limit</string>
    <string name="add_valid_number">Add a valid Number</string>
    <string name="addingNumberNote">make sure to set usage limit for this members as to make use of the group quotas</string>
    <string name="addingNumberNote1">Once adding a member,s/he will be able to enjoy the group bundle with open limit</string>
    <string name="addons">Add-ons</string>
    <string name="address">Address</string>
    <string name="adsl_signup_confirmation_code_p1">You will receive an SMS on </string>
    <string name="adsl_signup_confirmation_code_p2"> with the confirmation code</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">0087C5AE9F18A81FDE8F65F0A9676EEB5184878643196C427810020BDA84AFB5C6631D41F8A5E806F46623C4EF87E0303444359C1ECEDE46FFE4130440B7B34AD6C78DD38E72D15966114A02C04C6BD1EB</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">00DDAEE14102CED7B62AD55F9DC7B38176FEE619FFD79A778D9F90B5CAA619758B57E005F4771D8FBA793C08C7B52E244CB9AE11C04B3437CFF94C5B935A62BCDEEE3CB0BD7E7FA066C2814A6135860FB964A6E0CE498E5B46A5694A0651D43568</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">0025B850FC0083DE260BAFDFDDA8127F5D1796AD300032B03984D2AE272305764B0A73E8D7EA5330F4A9D2606903D70706974EC94C116F867B43E607FE9ED6312338315D4A8AAB4294C9038A5FCADB9A0B1A846B6C440B21EB2C41F29E66642EE1</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">00C1FB3C34957184A939A5D583D15E6CC6EC7F39E6F35436C06E878DAC5DED9F049F4406BE060AC36A09BDCB7D62A31289</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">9340C0207399229827D3477B0D51F54D</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00D454E21C868FC7A615B3194BEA92081598E5A5B3CE1E6A3372EC27A459124ED6</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">001FDA14E39232128777102F7CD4DDF5D6E1D2B939B4DEE895457F4D3B333D4E5EE388DD22A9E9E92676D3593D1B3ED13E</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">007C4D655560FCE277F4A3EE5EF770809BABF0707F09DA6A0B3E7850771318D1B7A604695414ECD0A3F4EB33F309DAD10FB4A4480A5EF76D4CC3F16C45F360AF182726CF221FAF76D1DADC2D8B9DD6F2BE2055DC687E239218773AA52CFFFD568B</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">002A8A9DE9D7A4F8915C66E7F38D44F89D444F985F0389DF9EFF996A04D865B088</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">001E5980D90F2A3BD201CD9FA9AAEBC05DAD0D797A6B320D7F5342EAE3A8157626034D8D412D2BB04B2D3C821EDE06486AFBE581D92D686CCC609B92ADAF032052</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">00C343EC1FAC49F0FCA3D2F0567C423675DE2DB9D80147C7B2C5953C41578081F6</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">00DDD87C649BCD6BF3C51829B4BDCFB7A8FE6649726B875262E784ECB6AB02138EF234470D341A4B1363F186BF3F5601B7</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">00F47E176A2B5F973C8A23142BA61E1B5307A57B04FE881992BC999B1A55E723E0</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">0013C44CF019A365A88F834995A30DD3974F8FF21BC8D95EE6C15FAEF207FAD37E882830E293248C60D3E3A0AEC2525FD7</string>
    <string name="amount_transfer">Amount in EGP</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="balance_amount">Balance transfer service costs 2% of the transferred amount with a minimum 0.20 EGP. Maximum limit of transfer per month is 100 EGP.</string>
    <string name="balance_amount_transfer">Enter the amount you want to transfer.</string>
    <string name="balance_number_tranfer">Enter the service number that you want to transfer balance to</string>
    <string name="balance_recharge">Balance Recharge</string>
    <string name="balance_transfer">Balance Transfer</string>
    <string name="balance_transfer_amount">Enter below the amount that you want to transfer in EGP</string>
    <string name="balance_transfer_history">Balance Transfer History</string>
    <string name="bill">Bill</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="btn_next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="due_date">Due Date</string>
    <string name="faq">FAQ</string>
    <string name="follow_us">Follow Us</string>
    <string name="home_collection">Home collection</string>
    <string name="home_collection_1">Home collection fee is</string>
    <string name="home_collection_2"> 10EGP/visit.</string>
    <string name="home_collection_3">Please make sure to pay your due bill before selecting Home Collection service \n\n</string>
    <string name="home_collection_4">Home Collection</string>
    <string name="home_collection_5"> is currently a</string>
    <string name="home_collection_6"> default payment method</string>
    <string name="home_collection_7">till you select another method.</string>
    <string name="invoice">Invoice</string>
    <string name="live_chat">Chat With Us</string>
    <string name="logout">Log Out</string>
    <string name="mobile_number">Service number</string>
    <string name="number_number">Service number</string>
    <string name="ok">OK</string>
    <string name="other_mobile_number">Enter below the service number that you want to transfer balance to</string>
    <string name="outstanding">Outstanding</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="payment_history">Payment History</string>
    <string name="quota_amount_transfer_10G">Quota Transfer in transaction: 10GB</string>
    <string name="quota_balance_amount_new">Service fees: 15 EGP for 10 GB transfer\nMaximum limit for quota transfer per month: 50 GB\nMaximum limit for quota transfer per transaction: 10 GB\nYou can currently transfer quota from your main package only</string>
    <string name="quota_to_be_transferred">Quota to be transferred</string>
    <string name="quota_transfer">Quota Transfer</string>
    <string name="quota_transfer_text_title">Enter below the service number that you want to transfer Quota to</string>
    <string name="settings">App Settings</string>
    <string name="title_home">Home</string>
    <string name="title_my_account">Account</string>
    <string name="title_promotions">Promotions</string>
    <string name="title_store_locator">Store locator</string>
    <string name="transfer_from">Transfer from:</string>
    <string name="transfer_unit">Main plan</string>
    <string name="you_must_subscribe_to_any_quota_till_you_can_use_this_service">You must subscribe to any quota till you can use this service</string>
</resources>