<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/home" android:enabled="true" android:id="@+id/navigation_home" android:checked="true" android:title="@string/title_home" app:showAsAction="always"/>
    <item android:icon="@drawable/promotions" android:enabled="true" android:id="@+id/navigation_promotions" android:title="@string/title_promotions" app:showAsAction="always"/>
    <item android:icon="@drawable/storelocator" android:enabled="true" android:id="@+id/navigation_store_locator" android:title="@string/title_store_locator" app:showAsAction="always"/>
    <item android:icon="@drawable/my_account" android:enabled="true" android:id="@+id/navigation_my_account" android:title="@string/title_my_account" app:showAsAction="always"/>
</menu>
