<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="15dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_large_new" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/other_mobile_number" style="@style/MyriadProRegularLeft"/>
    <EditText android:textSize="@dimen/text_large_new" android:textColor="@color/colorPrimary" android:id="@+id/edtMobileNumber" android:background="@drawable/edit_text_underline_new" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginBottom="15dp" android:hint="@string/mobile_number" android:maxLength="11" android:inputType="number" style="@style/MontserratRegular"/>
    <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_large_new" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/balance_transfer_amount" style="@style/MyriadProRegularLeft"/>
    <EditText android:textSize="@dimen/text_large_new" android:textColor="@color/colorPrimary" android:id="@+id/edtAmount" android:background="@drawable/edit_text_underline_new" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginBottom="15dp" android:hint="@string/amount_transfer" android:inputType="number" style="@style/MontserratRegular"/>
    <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_medium_new" android:textColor="@color/gray" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/balance_amount" style="@style/MyriadProRegularLeft"/>
    <Button android:textSize="@dimen/text_large_new" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnNext" android:background="@drawable/new_rounded_corner_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="@string/btn_next" android:textAllCaps="false"/>
</LinearLayout>
