<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:orientation="vertical" android:background="@drawable/background_gradiant_popup" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:background="#0000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="12dp" android:layout_centerInParent="true" android:elevation="4dp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="16dp" app:cardElevation="4dp">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.ucare.we.view.AppCompatTextView android:textSize="20sp" android:textColor="@color/black_light" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/home_collection" android:layout_weight="1" style="@style/MyriadProBold"/>
                <ImageView android:id="@+id/imgClose" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close_black_24dp"/>
            </LinearLayout>
            <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_50" app:srcCompat="@drawable/ic_success_vector"/>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_30">
                <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/black_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_collection_1" style="@style/QuickSandMedium"/>
                <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/color_dark_purple_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_collection_2" style="@style/QuickSandMedium"/>
            </LinearLayout>
            <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/home_collection_3" style="@style/QuickSandMedium"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/color_dark_purple_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_collection_4" style="@style/QuickSandMedium"/>
                <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/black_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_collection_5" style="@style/QuickSandMedium"/>
            </LinearLayout>
            <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/color_dark_purple_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_collection_6" style="@style/QuickSandMedium"/>
            <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/___14ssp" android:textColor="@color/black_light" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_collection_7" style="@style/QuickSandMedium"/>
            <com.ucare.we.view.AppCompatTextView android:textSize="9sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/txtOK" android:layout_width="match_parent" android:layout_height="30dp" android:layout_marginTop="@dimen/margin_30" android:text="@string/ok" android:textAllCaps="false" android:fontFamily="@font/montserrat_bold" android:layout_marginStart="@dimen/margin_30" android:layout_marginEnd="@dimen/margin_30" app:background="@drawable/border_radius_corner"/>
            <View android:background="@color/white" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:layout_marginStart="@dimen/margin_30" android:layout_marginEnd="@dimen/margin_30"/>
            <com.ucare.we.view.AppCompatTextView android:textSize="12sp" android:textColor="@color/colorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@+id/txtCancel" android:layout_width="match_parent" android:layout_height="30dp" android:layout_marginBottom="@dimen/edit_text_padding" android:text="@string/cancel" android:textAllCaps="false" android:fontFamily="@font/montserrat_bold" android:layout_marginStart="@dimen/margin_30" android:layout_marginEnd="@dimen/margin_30" app:background="@drawable/rounded_selected_primary"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
