<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/___40sdp" android:paddingEnd="@dimen/___40sdp">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btnBalanceRecharge" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/balance_recharge" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btnPayBill" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/pay_bill" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btnBillServices" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/bill_summary" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btnPaymentHistory" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/payment_history" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btnBalanceTransfer" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/balance_transfer" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btnQuotaTransfer" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/quota_transfer" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:gravity="center" android:id="@+id/btn_balance_transfer_history" android:background="@drawable/new_rounded_corner_button_stroke" android:padding="@dimen/activity_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/___20sdp" android:text="@string/balance_transfer_history" android:textAllCaps="false"/>
            <Button android:textSize="@dimen/text_large_new" android:textColor="@color/color_dark_purple_new" android:id="@+id/btn_auto_recharge" android:background="@drawable/new_rounded_corner_button_stroke" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Auto_recharge" android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
