<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/lnrHeader" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <View android:id="@+id/div" android:background="@color/color_background" android:layout_width="match_parent" android:layout_height="1dp"/>
    <LinearLayout android:orientation="horizontal" android:padding="@dimen/margin_5" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_medium_new" android:textColor="@color/color_black_new" android:gravity="center" android:id="@+id/txtInvoiceNumber" android:padding="5dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/invoice" android:layout_weight="1" style="@style/MontserratRegular"/>
        <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_medium_new" android:textColor="@color/color_black_new" android:gravity="center" android:id="@+id/txtInvoiceDate" android:padding="5dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/date" android:layout_weight="1" style="@style/MontserratRegular"/>
        <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_medium_new" android:textColor="@color/color_black_new" android:gravity="center" android:id="@+id/txtInvoiceDueDate" android:padding="5dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/due_date" android:layout_weight="1" style="@style/MontserratRegular"/>
        <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_medium_new" android:textColor="@color/color_black_new" android:gravity="center" android:id="@+id/txtInvoiceBill" android:padding="5dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/bill" android:layout_weight="1" style="@style/MontserratRegular"/>
        <com.ucare.we.view.AppCompatTextView android:textSize="@dimen/text_medium_new" android:textColor="@color/color_black_new" android:gravity="center" android:id="@+id/txtInvoiceOutstanding" android:padding="5dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/outstanding" android:layout_weight="1" style="@style/MontserratRegular"/>
    </LinearLayout>
</LinearLayout>
